--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.4
 Deprecated==1.2.13
+dnspython==2.2.0
+email-validator==1.1.3
 Faker==12.3.0
 fastapi==0.73.0
 flower==1.0.0
@@ -23,12 +25,15 @@ kombu==5.2.3
 Mako==1.1.6
 MarkupSafe==2.0.1
 packaging==21.3
+passlib==1.7.4
 prometheus-client==0.13.1
 prompt-toolkit==3.0.27
 pydantic==1.9.0
+PyJWT==2.3.0
 pyparsing==3.0.7
 python-dateutil==2.8.2
 python-dotenv==0.19.2
+python-multipart==0.0.5
 pytz==2021.3
 PyYAML==6.0
 redis==4.1.3
