--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,12 @@ amqp==5.0.9
 anyio==3.5.0
 asgiref==3.5.0
 asyncpg==0.25.0
+atomicwrites==1.4.0
+attrs==21.4.0
 billiard==3.6.4.0
 celery==5.2.3
+certifi==2021.10.8
+charset-normalizer==2.0.11
 click==8.0.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -21,28 +25,35 @@ h11==0.13.0
 httptools==0.3.0
 humanize==3.14.0
 idna==3.3
+iniconfig==1.1.1
 kombu==5.2.3
 Mako==1.1.6
 MarkupSafe==2.0.1
 packaging==21.3
 passlib==1.7.4
+pluggy==1.0.0
 prometheus-client==0.13.1
 prompt-toolkit==3.0.27
+py==1.11.0
 pydantic==1.9.0
 PyJWT==2.3.0
 pyparsing==3.0.7
+pytest==7.0.0
 python-dateutil==2.8.2
 python-dotenv==0.19.2
 python-multipart==0.0.5
 pytz==2021.3
 PyYAML==6.0
 redis==4.1.3
+requests==2.27.1
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.31
 starlette==0.17.1
+tomli==2.0.1
 tornado==6.1
 typing_extensions==4.0.1
+urllib3==1.26.8
 uvicorn==0.17.4
 vine==5.0.0
 watchgod==0.7
